# ORDER-MATCHING-ENGINE

./: Cargo.toml  README.md
src/: api.rs  fabric.rs  main.rs  shard.rs  types.rs
src/algorithms/: errors.rs  fifo.rs  hybrid.rs  mod.rs  pro_rata.rs  test.rs
src/engine/: mod.rs  order.rs  shard.rs
src/order-book/: ask_book.rs  bid_book.rs  orderbooklogic.txt
src/utils/: affinity.rs
